# lambdo

./: .gitignore  deployer.py  lambdo.py  pyproject.toml  setup.py
.github/workflows/: publish.yaml
